# vdb

./: .pylintrc  README.md  pyproject.toml  vdb.py
.devcontainer/: devcontainer.json
.docker/: Dockerfile.dev  docker-compose-dev.yml
data/: animal_farm.txt
